--- a/css/style.scss
+++ b/css/style.scss
@@ -61,7 +61,7 @@ img {
   align-items: center;
   width: 150px;
   min-height: 180px;
-  background-color: aqua;
+  background-color: rgb(57, 91, 245);
   font-size: 52px;
   font-weight: bold;
   border-radius: 10px;
@@ -82,7 +82,7 @@ img {
   box-shadow: 5px 5px 10px 5px rgba(34, 60, 80, 0.3);
   color: black;
 }
-.card.succes {
+.card.success {
   background-color: rgb(255, 255, 255);
   box-shadow: none;
   color: rgb(0, 0, 0);
