--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@ img {
 }
 
 .game__container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  gap: 25px;
+  grid-template-columns: repeat(4, auto);
   list-style: none;
 }
 .game__title {
@@ -72,11 +72,11 @@ img {
   border: 1px solid transparent;
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
   cursor: pointer;
-  transition: box-shadow 0.3s, border 0.3s, opacity 0.3s;
-  margin-bottom: 25px;
+  transition: box-shadow 0.3s, border 0.3s, opacity 0.3s, background-color 0.3s;
 }
-.card:not(:last-child) {
-  margin-right: 25px;
+.card:hover {
+  background-color: rgb(89, 118, 248);
+  box-shadow: none;
 }
 
 .card.open {
