--- a/css/style.scss
+++ b/css/style.scss
@@ -42,9 +42,10 @@ img {
 }
 .game {
   &__container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    gap: 25px;
+    grid-template-columns: repeat(4, auto);
+
     list-style: none;
   }
   &__title {
@@ -69,10 +70,10 @@ img {
   border: 1px solid transparent;
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
   cursor: pointer;
-  transition: box-shadow 0.3s, border 0.3s, opacity 0.3s;
-  margin-bottom: 25px;
-  &:not(:last-child){
-    margin-right: 25px;
+  transition: box-shadow 0.3s, border 0.3s, opacity 0.3s, background-color 0.3s;
+  &:hover {
+    background-color: rgb(89, 118, 248);
+    box-shadow: none;
   }
 }
 
@@ -89,5 +90,3 @@ img {
   opacity: 0.3;
   pointer-events: none;
 }
-
-
